--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lucide-react": "^0.555.0",
     "react-markdown": "^10.1.0",
     "react": "^19.2.1",
-    "recharts": "^3.5.1"
+    "recharts": "^3.5.1",
+    "@supabase/supabase-js": "2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
